--- a/reader.html
+++ b/reader.html
@@ -25,6 +25,7 @@
         color: #1b1b1b; */
         max-width: 90vw;
         /* font-size: 2em; */
+        font-size: 1em;
         text-indent: 2em;
       }
       #file-input {
@@ -41,8 +42,8 @@
         column-gap: 30px;
       }
       button {
-        min-width: 10vw;
-        font-size: 1.5em;
+        min-width: 3em;
+        font-size: 1em;
         /* border-radius: 20px; */
       }
       a{
