--- a/reader.html
+++ b/reader.html
@@ -29,8 +29,8 @@
         text-indent: 2em;
       }
       #file-input {
-        margin-left: 10vw;
-        margin-top: 10vw;
+        /* margin-left: 50px; */
+        margin: 50px;
         font-size: 2em;
         display: none;
       }
@@ -62,11 +62,20 @@
         align-content: center;
         align-items: center;
         margin-bottom: 50px;
+        row-gap: 10px;
       }
       #info button{
         font-size: 1em;
         min-width: 5vw;
         margin: 0 10px;
+      }
+      .color-selector{
+        display: inline-flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: flex-start;
+        row-gap: 5px;
+        column-gap: 10px;
       }
       .color-ball{
         min-width: 1em !important;
@@ -79,6 +88,52 @@
       .color-ball:hover, .color-ball.selected{
         transform: scale(1.3);
         box-shadow: #aaa 0 0 5px;
+      }
+      #loading_file{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;
+        align-content: center;
+      }
+      #select-list{
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: rgba(0,0,0,0.5);
+        z-index: 100;
+        /* display: flex; */
+        justify-content: center;
+        align-items: center;
+        /* padding-left: 10px; */
+      }
+      #file-list{
+        background-color: #f9f9f9;
+        padding: 20px;
+        padding-left: 30px;
+        margin: auto;
+        /* margin-left: ; */
+        border-radius: 10px;
+        max-width: calc(80vw - 40px);
+        max-height: 80vh;
+        overflow: auto;
+      }
+      #file-list li{
+        margin: 10px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+      #javascript-disabled{
+        /* display: block; */
+        text-align: center;
+        color: red;
+        font-size: 2em;
       }
     </style>
   </head>
@@ -94,9 +149,30 @@
     <div class="info" id="info">
       <div>阅读时间: <span id="reading-time">0</span> min</div>
       <div>阅读进度: <span id="reading-progress">0</span> %</div>
-      <div>设置字体: <button id="font-smaller">缩小</button> <span id="global-font-size">26</span> px <button id="font-larger">放大</button></div>
+      <div>设置字体: <span style="display: inline-block;"><button id="font-smaller">缩小</button> <span id="global-font-size">26</span> px <button id="font-larger">放大</button></span></div>
       <div>设置文本颜色: <span class="color-selector" id="selector-color" target="color"></span></div>
       <div>设置背景色: <span class="color-selector" id="selector-background-color" target="background-color"></span></div>
+    </div>
+    <p id="loading_file"><button id="load_from_fs">从本地加载文件</button> <button id="load_from_opfs">从缓存加载文件</button></p>
+    <div id="select-list">
+      <ul id="file-list">
+        <li>文件列表 1111111111ntents: [], titles: [], reading_time: null, last_time: null, font_size: 26, 'background-color': '#f9f9f9', 'color': '#1b1b1b', }; const [ fileInput, fileContent, dropArea, control, prevChapter, </li>
+        <li>文件列表 2</li>
+        <li>文件列表 3</li>
+        <li>文件列表 3</li>
+        <li>文件列表 3</li>
+        <li>文件列表 3</li>
+        <li>文件列表 3</li>
+        <li>文件列表 3</li>
+        <li>文件列表 3</li>
+        <li>文件列表 3</li>
+        <li>文件列表 3</li>
+        <li>文件列表 3</li>
+        <li>文件列表 3</li>
+        <li>文件列表 3</li>
+        <li>文件列表 3</li>
+        <li>文件列表 3</li>
+      </ul>
     </div>
     <script>
       document.getElementById("javascript-disabled").style.display = "none";
@@ -126,6 +202,10 @@
         fontSmaller,
         globalFontSize,
         fontLarger,
+        loadFromFs,
+        loadFromOpfs,
+        selectList,
+        fileList,
       ] = [
         "file-input",
         "file-content",
@@ -140,6 +220,10 @@
         "font-smaller",
         "global-font-size",
         "font-larger",
+        "load_from_fs",
+        "load_from_opfs",
+        "select-list",
+        "file-list",
       ].map((id) => document.getElementById(id));
 
       // mobile adaptation
@@ -176,6 +260,9 @@
         if (!state.file_name) {
           fileInput.click();
         }
+      });
+      loadFromFs.addEventListener("click", () => {
+        fileInput.click();
       });
       fileInput.addEventListener(
         "change",
@@ -217,14 +304,16 @@
         readingProgress.innerText = Math.round(state.chapter / state.contents.length * 100);
         state.last_time = now;
       }
+      function set_format_as_opened(){
+        infoDiv.style.display = "flex";
+          fileInput.style.display = "none";
+          control.style.display = "flex";
+          fileContent.classList.remove("drop-area");
+      }
       // read file from file input
       function readFile(file) {
         const reader = new FileReader();
         reader.onload = () => {
-          infoDiv.style.display = "flex";
-          fileInput.style.display = "none";
-          control.style.display = "flex";
-          fileContent.classList.remove("drop-area");
           // fileContent.innerText = reader.result.slice(0, 100);
           state.file_name = file.name;
           state.titles = [];
@@ -275,7 +364,13 @@
           state.reading_time = null;
           state.last_time = null;
 
+          set_format_as_opened();
           readChapter(null);
+          save_to_opfs(state.file_name, {
+            file_name: state.file_name,
+            titles: state.titles,
+            contents: state.contents,
+          });
         };
         reader.onerror = (e) => {
           infoDiv.style.display = "none";
@@ -330,6 +425,7 @@
         cache.records = cache.records || {};
         const record = cache.records[state.file_name] =
           cache.records[state.file_name] || { time: 0, chapter: 0 };
+        cache.reading = state.file_name;
         // load progress
         if (state.chapter === null) {
           state.chapter = record.chapter || 0;
@@ -438,6 +534,118 @@
         create_color_selector(elem);
       }
       load_settings();
+
+
+      async function get_opfs_list() {
+        try {
+          const root = await navigator.storage.getDirectory();
+          const folder = await root.getDirectoryHandle("txt_reader_data", { create: false });
+          const entries = await folder.values();
+          const list = [];
+          for await (const entry of entries) {
+            list.push(entry.name);
+          }
+          console.log("✅ OPFS 文件列表:", list);
+          return list;
+        } catch (error) {
+          console.error("❌ 获取文件列表失败:", error);
+        }
+      }
+      async function save_to_opfs(name, data) {
+        const jsonString = JSON.stringify(data);
+        const file_name = name.replace(/[\/\\\.\?\*\"\<\>\|]/g, "_") + '.json';
+        try {
+          // 获取 OPFS 根目录
+          const root = await navigator.storage.getDirectory();
+          const folder = await root.getDirectoryHandle("txt_reader_data", { create: true });
+          // 创建或打开文件
+          const fileHandle = await folder.getFileHandle(file_name, { create: true });
+          // 获取可写流并写入数据
+          const writable = await fileHandle.createWritable();
+          await writable.write(jsonString);
+          await writable.close();
+          console.log("✅ JSON 数据已保存到 OPFS");
+        } catch (error) {
+          console.error("❌ 写入失败:", error);
+        }
+      }
+      async function load_from_opfs(name) {
+        const file_name = name;
+        // const file_name = name.replace(/[\/\\\.\?\*\"\<\>\|\n\r]/g, "_") + '.json';
+        try {
+          const root = await navigator.storage.getDirectory();
+          const folder = await root.getDirectoryHandle("txt_reader_data", { create: true });
+          const fileHandle = await folder.getFileHandle(file_name, { create: false });
+          const file = await fileHandle.getFile();
+          // 读取文件内容并解析 JSON
+          const text = await file.text();
+          const data = JSON.parse(text);
+          console.log("✅ 读取到的 JSON 数据:", data);
+          return data;
+        } catch (error) {
+          console.error("❌ 读取失败:", error);
+          return null;
+        }
+      }
+      async function remove_in_opfs(name) {
+        const file_name = name;
+        // const file_name = name.replace(/[\/\\\.\?\*\"\<\>\|\n\r]/g, "_") + '.json';
+        try {
+          const root = await navigator.storage.getDirectory();
+          const folder = await root.getDirectoryHandle("txt_reader_data", { create: true });
+          const fileHandle = await folder.getFileHandle(file_name, { create: false });
+          await fileHandle.remove();
+          console.log("✅ 文件已删除");
+        } catch (error) {
+          console.error("❌ 删除失败:", error);
+        }
+      }
+      // saveJsonToOPFS();
+      // readJsonFromOPFS();
+      // get_opfs_list();
+      async function load_from(name){
+        const data = await load_from_opfs(name);
+        if(!data){
+          return;
+        }
+        try{
+          set_format_as_opened();
+          // const name = data.file_name;
+          state.file_name = data.file_name;
+          state.titles = data.titles;
+          state.contents = data.contents;
+          state.reading_time = null;
+          state.last_time = null;
+          state.chapter = null;
+          updateStorage();
+          readChapter(null);
+        }catch(e){
+          console.error(e);
+          await remove_in_opfs(name);
+        }
+      }
+      
+      loadFromOpfs.addEventListener("click", async () => {
+        const list = await get_opfs_list();
+        if((!list) || list.length === 0){
+          return;
+        }
+        selectList.style.display = "flex";
+        fileList.innerHTML = list.map((name) => `<li onclick="load_from('${name}')">${name.endsWith(".json")?name.slice(0,-5):name}</li>`).join("");
+      });
+      selectList.addEventListener("click", (event) => {
+        selectList.style.display = "none";
+      });
+
+      setTimeout(() => {
+        document.getElementById("javascript-disabled").style.display = "none";
+        const file_name = JSON.parse(localStorage.getItem("txt_reader_cache"))?.reading;
+        if(file_name){
+          const name = file_name.replace(/[\/\\\.\?\*\"\<\>\|]/g, "_") + '.json';
+          load_from(name);
+        }
+      }, 500);
+      
 
     </script>
   </body>
